added link to resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/RothHeadshot.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Eatai Roth</a></h1>
-					<p>broadly curious problem solver<br />
+					<p>a broadly curious problem solver<br />
 					who's also a scientist and engineer</p>
 				</header>
 				<nav id="nav">
@@ -55,8 +55,9 @@
 										<h3>Hello. I'm Eatai.</h3>
 										<p>It's pronounced E-tie.</p>
 									</header>
-									<p>I am a mechanical engineer and artist by training with a research background in behavioral neuroscience, robotics, and data science. I have over 15 years of experience in problem identification, project planning, design and fabrication, data analysis and visualization, scientific communication, and publishing. I excel at working in and leading interdisciplinary research teams, learning new skills to creatively tackle problems, and translating tools from one discipline to address challenges in another.</p>
+									<p>I am a mechanical engineer and artist by training with a research background in behavioral neuroscience, robotics, and data science. I have over 15 years of experience in problem identification, project planning, design and fabrication, data analysis and visualization, and scientific communication. I excel at working in and leading interdisciplinary research teams, learning new skills to creatively tackle problems, and translating tools from one discipline to address challenges in another.</p>
 									<p>I also enjoy architecture and design, politics and the intention of doing good, </br>crafts of all types, puzzles of all types, food of most types, </br>and the Philadelphia Eagles (Go Birds!).</p>								
+									<p><a href="/downloads/EataiRoth_Resume.pdf" download="EataiRoth_Resume.pdf">My r&eacutesum&eacute </a>, if you're interested.</p>
 								</div>
 							</section>
 
